Added ml feature data grab

--- a/.github/workflows/update_ml_data.yml
+++ b/.github/workflows/update_ml_data.yml
@@ -6,7 +6,7 @@ on:
     - cron: '10 2 * * *' # Runs daily at 2 AM UTC
 
 jobs:
-  download:
+  download-ml-perfherder-data:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -32,4 +32,32 @@ jobs:
           git config --local user.name "GitHub Actions"
           git add ml-data.json
           git diff --cached --quiet || git commit -m "Update ml-data.json"
+          git push
+
+  download-ml-feature-data:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Download JSON data file
+        id: download
+        run: |
+          wget -O ml-engine-data.json "https://sql.telemetry.mozilla.org/api/queries/106820/results.json?api_key=iIPEZvkm6jzp9eKGbnnEOgj7WmpIpkAvcVECq1aV"
+        continue-on-error: true
+
+      - name: Check if download succeeded
+        run: |
+          if [ ! -f ml-engine-data.json ]; then
+            echo "Download failed. Aborting to avoid overwriting previous data."
+            exit 1
+          fi
+      - name: Commit and push if changed
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git add ml-engine-data.json
+          git diff --cached --quiet || git commit -m "Update ml-engine-data.json"
           git push
