--- a/.github/workflows/update_android_data.yml
+++ b/.github/workflows/update_android_data.yml
@@ -3,7 +3,7 @@ name: Update Android Data
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 2 * * *' # Runs daily at 2 AM UTC
+    - cron: '0 */6 * * *' # Runs every 6 hours
 
 jobs:
   download_and_gzip:
